--- a/homework_03/css/style2.css
+++ b/homework_03/css/style2.css
@@ -1,62 +1,90 @@
 body {
   background-color: rgba(198, 238, 252, 0.53);
   color: #ffffff; }
-  body a:link {
-    color: #fccd10; }
-  body #content {
-    background-color: #3b3b3b;
-    width: 950px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px; }
-  body p {
-    color: #ffffff; }
-  body h1 {
-    color: #fccd10;
-    text-transform: uppercase;
-    text-align: center; }
-  body h2 {
-    color: #fccd10; }
-  body img {
-    border: 2px solid #fccd10;
-    padding: 3px; }
-  body .img-left {
-    float: left;
-    margin: 5px 10px 5px 0px; }
-  body .img-right {
-    float: right;
-    margin: 5px 0px 5px 10px; }
-  body .brief {
-    color: #000000;
-    background: #fff178;
-    width: 910px;
-    padding: 20px;
-    float: left;
-    margin: 5px 10px 5px 0px; }
-  body caption {
-    text-align: right; }
-  body table {
-    line-height: 30px; }
-  body th {
-    text-transform: uppercase;
-    background: #94a34e; }
-  body td {
-    background: #677d01;
-    border-bottom: 1px solid #677d01; }
-  body .name {
-    display: flex; }
-  body .pad {
-    padding-right: 5px; }
-  body .inpwidth {
-    width: 455px; }
-  body .inpwidth2 {
-    width: 920px; }
-  body button {
-    background-color: #3b3b3b;
-    border: 1px solid #f5c70f;
-    color: #f5c70f;
-    padding: 10px 52px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px; }
+
+a:link {
+  color: #fccd10; }
+
+#content {
+  background-color: #3b3b3b;
+  width: 950px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px; }
+
+p {
+  color: #ffffff; }
+
+h1 {
+  color: #fccd10;
+  text-transform: uppercase;
+  text-align: center; }
+
+h2 {
+  color: #fccd10; }
+
+img {
+  border: 2px solid #fccd10;
+  padding: 3px; }
+
+.img-left {
+  float: left;
+  margin: 5px 10px 5px 0px; }
+
+.img-right {
+  float: right;
+  margin: 5px 0px 5px 10px; }
+
+.brief {
+  color: #000000;
+  background: #fff178;
+  width: 910px;
+  padding: 20px;
+  float: left;
+  margin: 5px 10px 5px 0px; }
+
+caption {
+  text-align: right; }
+
+table {
+  border-collapse: collapse;
+  line-height: 30px; }
+  table tr {
+    border-bottom: 2px solid #94a34e; }
+    table tr th:nth-child(1) {
+      border-right: 1px solid white; }
+    table tr th:nth-child(2) {
+      border-right: 1px solid white; }
+
+th {
+  text-transform: uppercase;
+  background: #94a34e; }
+
+td {
+  background: #677d01;
+  border-bottom: 1px solid #677d01; }
+
+.name {
+  display: flex; }
+
+.pad {
+  padding-right: 5px; }
+
+.inpwidth {
+  width: 455px; }
+
+.inpwidth2 {
+  width: 920px; }
+
+button {
+  background-color: #3b3b3b;
+  border: 1px solid #f5c70f;
+  color: #f5c70f;
+  padding: 10px 52px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; }
+
+.feed p {
+  color: #fccd10; }
